tests/local_ref_uninit_read_bad.sl
fn f() int {
	var x &int
	return *x
}
